Fix wrapping rows in docs

--- a/scss/docs/docs.scss
+++ b/scss/docs/docs.scss
@@ -68,6 +68,10 @@ hr {
 
     margin-left: inherit;
     padding: $content-padding;
+
+    .row {
+      @include vf-b-row-reset;
+    }
   }
 }
 
